root/etc/firewall
# Generated by iptables-save v1.4.1.1 on Fri Dec  5 23:25:33 2008
*filter
:INPUT ACCEPT [1222:125832]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [40119:35951418]
-A INPUT -i eth1 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -i eth1 -p tcp -m tcp --dport 113 -j ACCEPT 
-A INPUT -i eth1 -p tcp -m tcp --dport 4662 -j ACCEPT 
-A INPUT -i eth1 -p udp -m udp --dport 4672 -j ACCEPT 
-A INPUT -i eth1 -m state --state RELATED,ESTABLISHED -j ACCEPT 

-A INPUT -i wlan0 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -i wlan0 -p tcp -m tcp --dport 113 -j ACCEPT 
#-A INPUT -i wlan0 -p tcp -m tcp --dport 4662 -j ACCEPT 
#-A INPUT -i wlan0 -p udp -m udp --dport 4672 -j ACCEPT 
-A INPUT -i wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i wlan0 -j DROP 
-A INPUT -i wlan0 -j DROP 
COMMIT
# Completed on Fri Dec  5 23:25:33 2008
